--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script type = "text/javascript" src = "main.js"></script>
 </head>
-<body>
-    <p>Guess a number between (1-100)</p>
-    <p id = "outputText">Enter a number below</p>
-    <input id="userimput" type="number"/> <button id = "btn" onclick = "run();">Enter</button>
-    <p id = "output">0</p>
-<script src = "main.js"></script>
+<body onload = "initialize();">
+    <input id = "text1" placeholder="1-100">
+    <br>
+    <button onclick="fn1();" id = "btn1">Enter</button>
+
 </body>
 </html>
