--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
     <br>
     <button onclick="fn1();" id = "btn1">Enter</button>
 
+
+
+    <h1 id="numberout"></h1>
+    <hr />
+    <button onclick="addOne();">Add</button>
+    <button onclick = "subtractOne();">Subtract</button>
+
 </body>
 </html>
