--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <script type = "text/javascript" src = "main.js"></script>
 </head>
 <body onload = "initialize();">
-    
+
     <button onclick="fn1();" id = "btn1">Enter</button>
 
     <h1 id="numberout"></h1>
     <hr />
     <button onclick="addOne();">Add</button>
     <button onclick = "subtractOne();">Subtract</button>
+
+    <br> <br>
+    <span>Guess Left:</span><span id = guesses>5</span>
 
 </body>
 </html>
