--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body onload = "initialize();">
 
     <button onclick="fn1();" id = "btn1">Enter</button>
+    <button onclick="reset();" id = "btn2">Reset</button>
 
     <h1 id="numberout"></h1>
     <hr />
