--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
 </head>
 <body onload = "initialize();">
 
+    <h1>Hot and Cold</h1>
+
     <button onclick="fn1();" id = "btn1">Enter</button>
     <button onclick="reset();" id = "btn2">Reset</button>
 
-    <h1 id="numberout"></h1>
-    <hr />
-    <button onclick="addOne();">Add</button>
-    <button onclick = "subtractOne();">Subtract</button>
+    <h2 id="numberout"></h2>
+    <button onclick="addOne();">Add 1</button>
+    <button onclick = "subtractOne();">Subtract 1</button>
+    <br>
+    <button onclick="addFive();">Add 5</button>
+    <button onclick = "subtractFive();">Subtract 5</button>
+    <br>
+    <button onclick="addTen();">Add 10</button>
+    <button onclick = "subtractTen();">Subtract 10</button>
+    <br>
+    <button onclick="add25();">Add 25</button>
+    <button onclick = "subtract25();">Subtract 25</button>
 
     <br> <br>
     <span>Guess Left:</span><span id = guesses>5</span>
 
+    <h3>Log</h3>
+    <p id = log></p>
 </body>
 </html>
