--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type = "text/javascript" src = "main.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload = "initialize();">
+
+<div class = "container">
 
     <h1>Hot and Cold</h1>
 
@@ -30,7 +33,9 @@
     <br> <br>
     <span>Guess Left:</span><span id = guesses>5</span>
 
-    <h3>Log</h3>
+    <h3>Log: </h3>
     <p id = log></p>
+
+</div>
 </body>
 </html>
